--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div id="works-sample">
             <div class="works-box">
                 <a href="#">
-        <img src="./images/website-1624028_1280.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+        <img src="./images/website-1624028_1280.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
          <div class="works-box-inner">
            <div class="text-center">
            <h3>株式会社きらめき コーポレートサイト</h3> 
@@ -62,7 +62,7 @@
             </div>
             <div class="works-box">
                 <a href="#">
-        <img src="./images/business-card-1680781_1280.png" alt="きらめき太郎様 名刺デザイン">
+        <img src="./images/business-card-1680781_1280.jpg" alt="きらめき太郎様 名刺デザイン">
         <div class="works-box-inner">
           <div class="text-center">
             <h3>きらめき太郎様 名刺</h3>
@@ -88,7 +88,7 @@
             </div>
             <div class="works-box">
                 <a href="#">
-                <img src="./images/business-card-1680781_1280.png" alt="きらめき太郎様 名刺デザイン">
+                <img src="./images/business-card-1680781_1280.jpg" alt="きらめき太郎様 名刺デザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>きらめき太郎様 名刺</h3>
@@ -114,7 +114,7 @@
             </div>
             <div class="works-box">
                 <a href="#">
-                <img src="./images/website-1624028_1280.png" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
+                <img src="./images/website-1624028_1280.jpg" alt="株式会社きらめき コーポレートサイト様 Webサイトデザイン">
                 <div class="works-box-inner">
                     <div class="text-center">
                         <h3>株式会社きらめき コーポレートサイト</h3>
